# OpenCV3_Sample

./: .gitignore  README.md
cpp/Image_onversion/bilateral_filter/: CMakeLists.txt  main.cpp  readme.md
cpp/Image_onversion/canny/: CMakeLists.txt  main.cpp  readme.md
cpp/Image_onversion/hough_line/: CMakeLists.txt  main.cpp  readme.md
cpp/drawing/put_text_sample/: CMakeLists.txt  main.cpp  readme.md
cpp/load/load_image_sample/: CMakeCache.txt  CMakeLists.txt
cpp/load/load_live_sample/: CMakeLists.txt  main.cpp  readme.md
cpp/load/load_video_sample/: CMakeLists.txt  main.cpp
cpp/object_detection/cat_detection/: CMakeLists.txt  main.cpp  readme.md
cpp/object_detection/face_detection/: CMakeLists.txt  main.cpp  readme.md
cpp/save/save_image_sample/: CMakeLists.txt  main.cpp  readme.md
cpp/save/save_video_sample/: CMakeLists.txt  main.cpp  readme.md
golang/Image_onversion/canny/: main.go  readme.md
golang/drawing/put_text_sample/: main.go  readme.md
golang/load/load_image_sample/: main.go  readme.md
golang/load/load_video_sample/: main.go  readme.md
golang/save/save_image_sample/: main.go  readme.md
golang/save/save_video_sample/: main.go  readme.md
